--- a/action.yml
+++ b/action.yml
@@ -81,7 +81,7 @@ runs:
       if: ${{ inputs.should-setup-buildx }} == 'true'
       with:
         driver: remote
-        endpoint: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-0-endpoint }}
+        endpoint: tcp://${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-0-endpoint }}
         platforms: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-0-platforms }}
         append: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-1-endpoint != '' && format('endpoint={0},platforms={1}', steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-1-endpoint, steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-1-platforms) }}
       env:
