--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           profile-name: "test-local-4"
           api-key: ${{ secrets.WARPBUILD_API_KEY }}
-          should-setup-buildx: "true"
+          should-setup-buildx: true
           timeout: "300000"
 
       - name: Build Dockerfile in __tests__ using Buildx
