--- a/.github/workflows/debug.yaml
+++ b/.github/workflows/debug.yaml
@@ -45,6 +45,10 @@ jobs:
 
       - name: Build Dockerfile in __tests__ using Buildx
         uses: docker/build-push-action@v6
+        env:
+          DOCKER_BUILD_RECORD_UPLOAD: false
+          DOCKER_BUILD_SUMMARY: false
+          DOCKER_BUILD_CHECKS_ANNOTATIONS: false
         with:
           context: .
           file: __tests__/Dockerfile
