--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ inputs:
     description: "The profile name to use for the WarpBuild Docker Builders"
     required: true
   should-setup-buildx:
-    description: "Whether to run setup-buildx automatically or not"
+    description: "Whether to run setup-buildx automatically or not, if false only the outputs will be returned"
     required: false
     default: "true"
   timeout:
@@ -49,20 +49,6 @@ outputs:
     description: "The client key for the second Docker builder."
     value: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-1-key }}
 
-  # Output passthrough from setup-buildx-action
-  setup-buildx-name:
-    description: "Builder name"
-    value: ${{ steps.setup-buildx.outputs.name }}
-  setup-buildx-driver:
-    description: "Builder driver"
-    value: ${{ steps.setup-buildx.outputs.driver }}
-  setup-buildx-platforms:
-    description: "Builder node platforms (preferred or available)"
-    value: ${{ steps.setup-buildx.outputs.platforms }}
-  setup-buildx-nodes:
-    description: "Builder nodes metadata"
-    value: ${{ steps.setup-buildx.outputs.nodes }}
-
 runs:
   using: "composite"
   steps:
@@ -80,19 +66,4 @@ runs:
         INPUT_API_KEY: ${{ inputs.api-key }}
         INPUT_PROFILE_NAME: ${{ inputs.profile-name }}
         INPUT_TIMEOUT: ${{ inputs.timeout }}
-
-    - name: Setup Buildx
-      uses: docker/setup-buildx-action@v3
-      if: ${{ inputs.should-setup-buildx == 'true' }}
-      with:
-        driver: remote
-        endpoint: tcp://${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-0-endpoint }}
-        platforms: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-0-platforms }}
-        append: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-1-endpoint != '' && format('endpoint=tcp://{0},platforms={1}', steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-1-endpoint, steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-1-platforms) || '' }}
-      env:
-        BUILDER_NODE_0_AUTH_TLS_CACERT: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-0-cacert }}
-        BUILDER_NODE_0_AUTH_TLS_CERT: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-0-cert }}
-        BUILDER_NODE_0_AUTH_TLS_KEY: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-0-key }}
-        BUILDER_NODE_1_AUTH_TLS_CACERT: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-1-cacert }}
-        BUILDER_NODE_1_AUTH_TLS_CERT: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-1-cert }}
-        BUILDER_NODE_1_AUTH_TLS_KEY: ${{ steps.setup-warpbuild-docker-builders.outputs.docker-builder-node-1-key }}
+        INPUT_SHOULD_SETUP_BUILDX: ${{ inputs.should-setup-buildx }}
