--- a/.github/workflows/debug.yaml
+++ b/.github/workflows/debug.yaml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ${{ inputs.runs-on }}
     strategy:
       matrix:
-        run_number: [1, 2, 3]
+        run_number: [1]
       fail-fast: false
     steps:
       - name: Checkout repository
