--- a/.github/workflows/debug.yaml
+++ b/.github/workflows/debug.yaml
@@ -55,4 +55,4 @@ jobs:
           tags: test-image-run-${{ matrix.run_number }}
           load: false
           push: false
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
