--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ inputs:
     description: "The API key for the WarpBuild API. This is not required in case of using WarpBuild runners"
     required: false
   profile-name:
-    description: "The profile name to use for the WarpBuild Docker Builders"
+    description: "The profile name to use for the WarpBuild Docker Builders. If you want to use multiple profiles for fallback, you can separate them with a comma."
     required: true
   should-setup-buildx:
     description: "Whether to run setup-buildx automatically or not, if false only the outputs will be returned"
