--- a/.github/workflows/debug.yaml
+++ b/.github/workflows/debug.yaml
@@ -37,6 +37,7 @@ jobs:
           profile-name: ${{ inputs.profile-name }}
           # api-key: ${{ secrets.WARPBUILD_API_KEY }}
           should-setup-buildx: true
+          timeout: 40000
 
       - name: Print run information
         run: |
